--- a/task 2.html
+++ b/task 2.html
@@ -13,13 +13,13 @@
             <a href="#" class="logo">What's On</a>
         </div>
         <div class="search-box">
-            <center><input type="text" class="search-input" placeholder="Search..."></center>
+            <input type="text" class="search-input" placeholder="Search...">
         </div>
         <div class="right-links">
             <a href="#">Movies</a>
             <a href="#">TV</a>
             <a href="#">Login</a>
-            <a href="#">Register</a>
+            <a href="#" class="register">Register</a>
         </div>
     </div>
 
