--- a/task 2.html
+++ b/task 2.html
@@ -64,6 +64,6 @@
     <br>
     <br>
     
-    <footer><center>Copyright &copy;2021 What's On</center></footer>
+    <footer>Copyright &copy;2021 What's On</footer>
 </body>
 </html>
