--- a/Task 1/Task1.html
+++ b/Task 1/Task1.html
@@ -7,7 +7,11 @@
     <title>Task 1</title>
 </head>
 <body>
-    <header><img src="logo.svg"></header>
+    <!--Creating header for the logo-->
+    <header>
+        <img src="logo.svg">
+    </header>
+    <!--Creating a container for the images-->
     <div class="container">
         <img src="cover-1.jpg">
         <img src="cover-2.jpg">
@@ -16,7 +20,10 @@
         <img src="cover-5.jpg">
         <img src="cover-6.jpg">
     </div>
+    <!--Paragraphs tag for the text-->
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <footer><center>Copyright &copy;2021 Erased Disks Ltd.</center></footer>
+    <br>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    <footer>Copyright &copy;2021 Erased Disks Ltd.</footer>
 </body>
 </html>
