--- a/Task 3/task3.html
+++ b/Task 3/task3.html
@@ -8,15 +8,17 @@
 </head>
 <body>
      <header>
+      <!--Creating a div for-->
         <div class="image"></div>
      </header>
-     
+     <!--Creating a div for rows-->
      <div class="row_container">
        <div class="row1"></div>
        <div class="row2"></div>
        <div class="row3"></div>
        <div class="row4"></div>
      </div>
+     <!--Creating a div for circles-->
      <div class="circle_container">
         <div class="circle1"></div>
         <div class="circle2"></div>
